--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/sungjae.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/sungjae.jpg" class="hoverZoomLink"></a>
+              <a href="images/sungjae.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/sungjae_circle.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -56,16 +56,30 @@
             </td>
             <td width="75%" valign="middle">
               <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing">
-                <papertitle>Cleaning the USNO-B Catalog Through Automatic Detection of Optical Artifacts</papertitle>
+                <papertitle>Accelerating Reinforcment Learning with Critical States from Prior Data</papertitle>
               </a>
               <br>
-              <strong>Jonathan T. Barron</strong>, <a href="http://stumm.ca/">Christopher Stumm</a>, <a href="http://cosmo.nyu.edu/hogg/">David W. Hogg</a>, <a href="http://www.astro.princeton.edu/~dstn/">Dustin Lang</a>, <a href="http://cs.nyu.edu/~roweis/">Sam Roweis</a>
-              <br>
-              <em>The Astronomical Journal</em>, 135, 2008
-              <p>We use computer vision techniques to identify and remove diffraction spikes and reflection halos in the USNO-B Catalog.</p>
-              <p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>
+              <strong>Sungjae Park</strong>, <a href="https://ayushj240.github.io/">Ayush Jain</a>, <a href="https://youngwoon.github.io/">Youngwoon Lee</a>, <a href="https://clvrai.com/web_lim/">Joseph J. Lim</a>
+              <em>To be submitted</em>, 135, 2008
+              <p>We use task oriented critical states to boost reinforcment learning.</p>
+              <!--<p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>-->
             </td>
           </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/pgm.jpg" alt="clean-usnob" width="160" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://drive.google.com/file/d/1DJUdiGnvgDkDH0zqAPN1Et51EoVInwbR/view?usp=sharing">
+                <papertitle>Online Active Gaussian Process Motion Planning in Unknown Environments</papertitle>
+              </a>
+              <br>
+              <strong>Sungjae Park</strong>, <a href="http://stumm.ca/">Hyelim Choi</a>, <a href="http://cosmo.nyu.edu/hogg/">Taekyun Kim</a>
+              <em>Coursework Project(2022 Spring Probabilistic Graphical Models)</em>
+              <p>We combine gaussian process motion planning with entropy-based information factor to perform online active motion planning in unknown environments</p>
+            </td>
+          </tr>
+
 
         </tbody></table>
 
