--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
               <heading>Research</heading>
               <p>
                 My research interest lies on robot learning for complex, long-horizon robot manipulation. I ultimately aim to develop a general-purpose robot. To achieve this, specific topics I am interested in :
+                <strong>Sungjae Park</strong>,<strong>Sungjae Park</strong>,<strong>Sungjae Park</strong>.
               </p>
+
             </td>
           </tr>
         </tbody></table>
@@ -60,7 +62,7 @@
               </a>
               <br>
               <strong>Sungjae Park</strong>, <a href="https://ayushj240.github.io/">Ayush Jain</a>, <a href="https://youngwoon.github.io/">Youngwoon Lee</a>, <a href="https://clvrai.com/web_lim/">Joseph J. Lim</a>
-              <em>To be submitted</em>, 135, 2008
+              <em>To be submitted</em>
               <p>We use task oriented critical states to boost reinforcment learning.</p>
               <!--<p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>-->
             </td>
@@ -75,8 +77,8 @@
               </a>
               <br>
               <strong>Sungjae Park</strong>, <a href="http://stumm.ca/">Hyelim Choi</a>, <a href="http://cosmo.nyu.edu/hogg/">Taekyun Kim</a>
-              <em>Coursework Project(2022 Spring Probabilistic Graphical Models)</em>
-              <p>We combine gaussian process motion planning with entropy-based information factor to perform online active motion planning in unknown environments</p>
+              <em>Coursework Project (Probabilistic Graphical Models, Spring 2022)</em>
+              <p>We combine gaussian process motion planning with entropy-based information factor to perform online active motion planning in unknown environments.</p>
             </td>
           </tr>
 
