--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/sungjae.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/sungjae_circle.jpg" class="hoverZoomLink"></a>
+              <a href="images/sungjae.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/sungjae_circle.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -69,7 +69,7 @@
           </tr>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/pgm.jpg" alt="clean-usnob" width="160" height="160">
+              <img src="images/pgm.png" alt="clean-usnob" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
               <a href="https://drive.google.com/file/d/1DJUdiGnvgDkDH0zqAPN1Et51EoVInwbR/view?usp=sharing">
