--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 -->
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/modern_robotics.jpeg" alt="cs188">
+              <img src="images/modern_robotics.jpeg" alt="modern_robotics" height="160", width="144">
             </td>
             <td width="75%" valign="center">
               <a href="http://hades.mech.northwestern.edu/index.php/Modern_Robotics">Student Instructor, Introduction to Robotics Spring 2022</a>
