--- a/index.html
+++ b/index.html
@@ -114,11 +114,21 @@
               <img src="images/modern_robotics.jpeg" alt="modern_robotics" height="160", width="144">
             </td>
             <td width="75%" valign="center">
-              <a href="http://hades.mech.northwestern.edu/index.php/Modern_Robotics">Student Instructor, Introduction to Robotics Spring 2022</a>
+              <papertitle>Introduction to Robotics</papertitle>
               <br>
-              <a href="http://hades.mech.northwestern.edu/index.php/Modern_Robotics">Undergraduate Tutoring, College Physics 1,2 Spring 2018, Fall 2018, Spring 2021, Fall 2021</a>
+              <a href="http://hades.mech.northwestern.edu/index.php/Modern_Robotics">Student Instructor, Spring 2022</a>
               <br>
-              <a href="http://hades.mech.northwestern.edu/index.php/Modern_Robotics">Undergraduate Tutoring, Linear Algebra, Spring 2021</a>
+              <p></p>
+              <papertitle>College Physics 1, 2</papertitle>
+              <br>
+              <a href="http://hades.mech.northwestern.edu/index.php/Modern_Robotics">Undergraduate Tutoring, Spring 2018, Fall 2018, Spring 2021, Fall 2021</a>
+              <br>
+              <p></p>
+              <papertitle>Linear Algebra</papertitle>
+              <br>
+              <a href="http://hades.mech.northwestern.edu/index.php/Modern_Robotics">Undergraduate Tutoring, Spring 2021</a>
+              <br>
+              <p></p>
             </td>
 
           </tr>
