--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/clean_promo.jpg" alt="clean-usnob" width="160" height="160">
+              <img src="images/critical_breakout.gif" alt="critical" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
               <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing">
@@ -62,14 +62,16 @@
               </a>
               <br>
               <strong>Sungjae Park</strong>, <a href="https://ayushj240.github.io/">Ayush Jain</a>, <a href="https://youngwoon.github.io/">Youngwoon Lee</a>, <a href="https://clvrai.com/web_lim/">Joseph J. Lim</a>
+              <br>
               <em>To be submitted</em>
+              <br>
               <p>We use task oriented critical states to boost reinforcment learning.</p>
               <!--<p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>-->
             </td>
           </tr>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/pgm.png" alt="clean-usnob" width="160" height="160">
+              <img src="images/pgm_example.png" alt="pgm" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
               <a href="https://drive.google.com/file/d/1DJUdiGnvgDkDH0zqAPN1Et51EoVInwbR/view?usp=sharing">
@@ -77,7 +79,9 @@
               </a>
               <br>
               <strong>Sungjae Park</strong>, <a href="http://stumm.ca/">Hyelim Choi</a>, <a href="http://cosmo.nyu.edu/hogg/">Taekyun Kim</a>
+              <br>
               <em>Coursework Project (Probabilistic Graphical Models, Spring 2022)</em>
+              <br>
               <p>We combine gaussian process motion planning with entropy-based information factor to perform online active motion planning in unknown environments.</p>
             </td>
           </tr>
@@ -111,7 +115,7 @@
 -->
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/modern_robotics.jpeg" alt="modern_robotics" height="160", width="144">
+              <img src="images/modern_robotics.jpeg" alt="modern_robotics" height="160", width="130">
             </td>
             <td width="75%" valign="center">
               <papertitle>Introduction to Robotics</papertitle>
@@ -121,12 +125,14 @@
               <p></p>
               <papertitle>College Physics 1, 2</papertitle>
               <br>
-              <a href="http://hades.mech.northwestern.edu/index.php/Modern_Robotics">Undergraduate Tutoring, Spring 2018, Fall 2018, Spring 2021, Fall 2021</a>
+              <p>Undergraduate Tutoring, Spring 2018, Fall 2018, Spring 2021, Fall 2021</p>
+              <!--<a href="http://hades.mech.northwestern.edu/index.php/Modern_Robotics">Undergraduate Tutoring, Spring 2018, Fall 2018, Spring 2021, Fall 2021</a>-->
               <br>
               <p></p>
               <papertitle>Linear Algebra</papertitle>
               <br>
-              <a href="http://hades.mech.northwestern.edu/index.php/Modern_Robotics">Undergraduate Tutoring, Spring 2021</a>
+              <p>Undergraduate Tutoring, Spring 2021</p>
+              <!--<a href="http://hades.mech.northwestern.edu/index.php/Modern_Robotics">Undergraduate Tutoring, Spring 2021</a>-->
               <br>
               <p></p>
             </td>
