--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
               <heading>Research</heading>
               <p>
                 My research interest lies on learning/developing a robot that can accomplish complex, long-horizon manipulation tasks. Ultimately, I aim to develop a general-purpose robot system. To achieve this, specific topics I am interested in :
-                <strong>learning a model with a human-like physical understanding</strong>, <strong>contact-rich dexterous manipulation</strong>, and <strong>developing efficient rl algorithms</strong>.
+                <br>
+                <strong>learning a model with a human-level physical understanding</strong>, <strong>developing efficient rl algorithms</strong>, and <strong>contact-rich dexterous manipulation</strong>.
               </p>
 
             </td>
