--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
               <img src="images/critical_breakout.gif" alt="critical" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
-              <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing">
-                <papertitle>Accelerating Reinforcment Learning with Critical States from Prior Data</papertitle>
-              </a>
+              <!--<a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing">-->
+              <papertitle>Accelerating Reinforcment Learning with Critical States from Prior Data</papertitle>
+              <!--</a>-->
               <br>
               <strong>Sungjae Park</strong>, <a href="https://ayushj240.github.io/">Ayush Jain</a>, <a href="https://youngwoon.github.io/">Youngwoon Lee</a>, <a href="https://clvrai.com/web_lim/">Joseph J. Lim</a>
               <br>
