--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
               <!--<p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>-->
             </td>
           </tr>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Projects</heading>
+            </td>
+          </tr>
+        </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/pgm_example.png" alt="pgm" width="160" height="160">
@@ -81,7 +90,7 @@
               <br>
               <strong>Sungjae Park</strong>, <a href="http://stumm.ca/">Hyelim Choi</a>, <a href="http://cosmo.nyu.edu/hogg/">Taekyun Kim</a>
               <br>
-              <em>Coursework Project (Probabilistic Graphical Models, Spring 2022)</em>
+              <em>Graduate Course Project (Probabilistic Graphical Models, Spring 2022)</em>
               <br>
               <p>We combine gaussian process motion planning with entropy-based information factor to perform online active motion planning in unknown environments.</p>
             </td>
