--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           </tr>
 -->
           <tr>
-            <td style="padding:0px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/modern_robotics.jpeg" alt="modern_robotics" height="200", width="150">
             </td>
             <td width="75%" valign="center">
@@ -134,10 +134,13 @@
               <br>
               <p></p>
               <papertitle>College Physics 1, 2</papertitle>
-              <p>Undergraduate Tutoring, Spring 2018, Fall 2018, Spring 2021, Fall 2021</p>
+              <br>
+              Undergraduate Tutoring, Spring 2018, Fall 2018, Spring 2021, Fall 2021
+              <br>
+              <br>
               <!--<a href="http://hades.mech.northwestern.edu/index.php/Modern_Robotics">Undergraduate Tutoring, Spring 2018, Fall 2018, Spring 2021, Fall 2021</a>-->
               <papertitle>Linear Algebra</papertitle>
-              <p>Undergraduate Tutoring, Spring 2021</p>
+              <br>Undergraduate Tutoring, Spring 2021
               <!--<a href="http://hades.mech.northwestern.edu/index.php/Modern_Robotics">Undergraduate Tutoring, Spring 2021</a>-->
               <br>
               <p></p>
