--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                My research interest lies on learning/developing a robot that can accomplish complex, long-horizon manipulation tasks. Ultimately, I aim to develop a general-purpose robot system. To achieve this, specific topics I am interested in :
+                My research interest lies on learning/developing a robot that can accomplish complex, long-horizon manipulation tasks. Ultimately, I aim to develop a general-purpose robot system. 
+                <p></p>
+                To achieve my ultimate goal, specific topics I am interested in :
                 <br>
-                <strong>learning a model with a human-level physical understanding</strong>, <strong>developing efficient rl algorithms</strong>, and <strong>contact-rich dexterous manipulation</strong>.
+                <strong>Learning a model with a human-level physical understanding</strong>, <strong>developing efficient rl algorithms</strong>, and <strong>contact-rich dexterous manipulation</strong>.
               </p>
 
             </td>
@@ -95,6 +97,7 @@
               <p>We combine gaussian process motion planning with entropy-based information factor to perform online active motion planning in unknown environments.</p>
             </td>
           </tr>
+          <!-- TODO: Add previous projects -->
 
 
         </tbody></table>
