--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 My research interest lies on <strong>learning/developing a robot that can accomplish complex, long-horizon manipulation tasks</strong>. Ultimately, I aim to develop a general-purpose robot system. 
                 To achieve my ultimate goal, specific topics I am interested in :
                 <p></p>
-                <strong>1. A model with a human-level physical understanding</strong>
+                <strong>1. An agent with physical understanding & reasoning ability</strong>
                 <br>
-                <strong>2. Efficient rl algorithms</strong>
+                <strong>2. Efficient reinforcment learning algorithms</strong>
                 <br>
                 <strong>3. Contact-rich dexterous manipulation</strong>.
               </p>
