--- a/index.html
+++ b/index.html
@@ -44,14 +44,8 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                My research interest lies on <strong>learning/developing a robot that can accomplish complex, long-horizon manipulation tasks</strong>. Ultimately, I aim to develop a general-purpose robot system. 
-                To achieve my ultimate goal, specific topics I am interested in :
-                <p></p>
-                1. <strong> Learning an agent with physical understanding & reasoning ability</strong>
-                <br>
-                2. <strong> Efficient reinforcment learning algorithms</strong>
-                <br>
-                3. <strong> Contact-rich dexterous manipulation</strong>.
+                My research interest lies on <strong>developing a learning robot that can accomplish complex, long-horizon manipulation tasks</strong>. Ultimately, I aim to develop a general-purpose robot system. 
+                To achieve my ultimate goal, specific topics I am interested in are : Learning an agent with physical understanding & reasoning ability, Efficient reinforcment learning algorithms, Contact-rich dexterous manipulation
               </p>
 
             </td>
@@ -64,7 +58,7 @@
             </td>
             <td width="75%" valign="middle">
               <!--<a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing">-->
-              <papertitle>Accelerating Reinforcment Learning with Critical States from Prior Data</papertitle>
+              <papertitle>Accelerating Reinforcement Learning with Critical States from Prior Data</papertitle>
               <!--</a>-->
               <br>
               <strong>Sungjae Park</strong>, <a href="https://ayushj240.github.io/">Ayush Jain</a>, <a href="https://youngwoon.github.io/">Youngwoon Lee</a>, <a href="https://clvrai.com/web_lim/">Joseph J. Lim</a>
