--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
               <heading>Research</heading>
               <p>
                 My research interest lies on <strong>developing a learning robot that can accomplish complex, long-horizon manipulation tasks</strong>. Ultimately, I aim to develop a general-purpose robot system. 
-                To achieve my ultimate goal, specific topics I am interested in are : Learning an agent with physical understanding & reasoning ability, Efficient reinforcment learning algorithms, Contact-rich dexterous manipulation
+                To achieve my ultimate goal, specific topics I am interested 
+                in are: learning an agent with physical understanding & reasoning ability, efficient reinforcement learning algorithms, and contact-rich dexterous manipulation.
               </p>
 
             </td>
