--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <p>
                 My research interest lies on <strong>developing a learning robot that can accomplish complex, long-horizon manipulation tasks</strong>. Ultimately, I aim to develop a general-purpose robot system. 
                 To achieve my ultimate goal, specific topics I am interested 
-                in are: learning an agent with physical understanding & reasoning ability, efficient reinforcement learning algorithms, and contact-rich dexterous manipulation.
+                in are: learning an agent with physical understanding & reasoning ability, enhancing sample-efficiency of reinforcement learning for complex manipulation tasks, and contact-rich dexterous manipulation.
               </p>
 
             </td>
