--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </p>-->
               <p style="text-align:center">
                 <a href="mailto:teri305@snu.ac.kr">Email</a> &nbsp/&nbsp
-                <a href="data/sungjae_cv_ver10.pdf">CV</a> &nbsp/&nbsp
+                <a href="data/sungjaecv_ver11.pdf">CV</a> &nbsp/&nbsp
               <!--  <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
               <!--  <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp -->
                 <a href="https://twitter.com/sungj1026">Twitter</a> &nbsp/&nbsp
