add error recovery, ocp temporarily

--- a/index.html
+++ b/index.html
@@ -45,14 +45,36 @@
               <heading>Research</heading>
               <p>
                 My research interest lies on <strong>developing a learning robot that can accomplish complex, long-horizon manipulation tasks</strong>. Ultimately, I aim to develop a general-purpose robot system. 
+                <br>
                 To achieve my ultimate goal, specific topics I am interested 
-                in are: learning an agent with physical understanding & reasoning ability, efficient reinforcement learning from prior data, and contact-rich dexterous manipulation.
+                in are: 
+                learning an agent with physical understanding & reasoning ability, efficient reinforcement learning from prior data, and contact-rich dexterous manipulation.
               </p>
 
+              <p>
+                * denotes equal contribution.
+              </p>
             </td>
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/error_recovery.gif" alt="critical" width="160" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <!--<a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing">-->
+              <papertitle>Learning Robust Manipulation with Error Recovery</papertitle>
+              <!--</a>-->
+              <br>
+              <a href="https://minoring.github.io//">Minho Heo*</a>, <strong><a href="https://rureadyo.github.io/">Sungjae Park*</a></strong>, <a href="https://clvrai.com/web_lim/">Joseph J. Lim</a>
+              <br>
+              <em>To be submitted</em>
+              <br>
+              <p>We achieve robust, higher success rate manipulation policy using error recovery.</p>
+              <!--<p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>-->
+            </td>
+          </tr>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/critical_breakout.gif" alt="critical" width="160" height="160">
@@ -70,7 +92,25 @@
               <!--<p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>-->
             </td>
           </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/ocp.png" alt="critical" width="200" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <!--<a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing">-->
+              <papertitle>Efficient Cross-Embodiment Learning with Object-Centric Planner</papertitle>
+              <!--</a>-->
+              <br>
+              <strong>Sungjae Park</strong>, <a href="https://clvrai.com/web_lim/">Joseph J. Lim</a>
+              <br>
+              <em>Bachelor's Thesis, 2022</em>
+              <br>
+              Awarded <strong>Outstanding BS Thesis Presentation Award</strong> 
 
+              <p>We use task oriented critical states to boost reinforcment learning.</p>
+              <!--<p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>-->
+            </td>
+          </tr>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
@@ -84,15 +124,37 @@
               <img src="images/pgm_example.png" alt="pgm" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
-              <a href="https://drive.google.com/file/d/10yVJBkjKwF7n_HiVM9kI8iKV5H0lPagu/view?usp=sharing">
+              <a href="data/PGM(Sungjae Park).pdf">
                 <papertitle>Online Active Gaussian Process Motion Planning in Unknown Environments</papertitle>
               </a>
               <br>
-              <strong>Sungjae Park</strong>, <a href="http://stumm.ca/">Hyelim Choi</a>, <a href="http://cosmo.nyu.edu/hogg/">Taekyun Kim</a>
+              <strong>Sungjae Park*</strong>, <a href="http://stumm.ca/">Hyelim Choi*</a>, <a href="http://cosmo.nyu.edu/hogg/">Taekyun Kim*</a>
               <br>
               <em>Graduate Course Project (Probabilistic Graphical Models, Spring 2022)</em>
               <br>
               <p>We combine gaussian process motion planning with entropy-based information factor to perform online active motion planning in unknown environments.</p>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/motion_planning.png" alt="pgm" width="160" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Efficient Motion Planning under Constraint with Learned Reachable Manifold</papertitle>
+              <br>
+              <strong>Sungjae Park</strong>
+              <p>Efficient motion planning under constraint by leveraging reachable manifold learned with block neural autoregressive flow.</p>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/peg_insertion.png" alt="pgm" width="160" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Vision Guided Peg Insertion</papertitle>
+              <br>
+              <strong>Sungjae Park*</strong>, Hosun Choi*, Hyunmoo Heo*
+              <p>Robust peg insertion with YOLO-v3 based hole/box detection model.</p>
             </td>
           </tr>
           <!-- TODO: Add previous projects -->
