--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <br>
               Awarded <strong>Outstanding BS Thesis Presentation Award</strong> 
 
-              <p>We use task oriented critical states to boost reinforcment learning.</p>
+              <p>We learn object centric trajectory planner from different robot's demonstration for cross-embodiment transfer. </p>
               <!--<p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>-->
             </td>
           </tr>
