update thesis advisor

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <papertitle>Efficient Cross-Embodiment Learning with Object-Centric Planner</papertitle>
               <!--</a>-->
               <br>
-              <strong>Sungjae Park</strong>, <a href="https://clvrai.com/web_lim/">Joseph J. Lim</a>
+              <strong>Sungjae Park</strong>, <a href="https://clvrai.com/web_lim/">Joseph J. Lim</a>,  <a href="https://sites.google.com/robotics.snu.ac.kr/fcp/">Frank C. Park</a>
               <br>
               <em>Bachelor's Thesis, 2022</em>
               <br>
