add dyros projects visualization

--- a/index.html
+++ b/index.html
@@ -137,24 +137,29 @@
           </tr>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/motion_planning.png" alt="pgm" width="160" height="160">
+              <img src="images/contrained_motion_planning_final.gif" alt="pgm" width="160" height="100">
             </td>
             <td width="75%" valign="middle">
-              <papertitle>Efficient Motion Planning under Constraint with Learned Reachable Manifold</papertitle>
+              <papertitle>Motion Planning under Constraint with Learned Reachable Manifold</papertitle>
               <br>
               <strong>Sungjae Park</strong>
-              <p>Efficient motion planning under constraint by leveraging reachable manifold learned with block neural autoregressive flow.</p>
+              <p>
+                We learn reachable manifold of franka panda robot arm with block neural autoregressive flow as in 
+              <a href="https://ieeexplore.ieee.org/document/9561589"
+                  <papertitile> Kim et al.</papertitile>
+              </a>
+              , and perform contrained motion planning directly in the learned latent space.</p>
             </td>
           </tr>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/peg_insertion.png" alt="pgm" width="160" height="160">
+              <img src="images/peg_insertion.gif" alt="pgm" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
               <papertitle>Vision Guided Peg Insertion</papertitle>
               <br>
               <strong>Sungjae Park*</strong>, Hosun Choi*, Hyunmoo Heo*
-              <p>Robust peg insertion with YOLO-v3 based hole/box detection model.</p>
+              <p>We perform robust peg insertion with YOLO-v3 based hole/box detection model.</p>
             </td>
           </tr>
           <!-- TODO: Add previous projects -->
