add suhan park as project member

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <td width="75%" valign="middle">
               <papertitle>Motion Planning under Constraint with Learned Reachable Manifold</papertitle>
               <br>
-              <strong>Sungjae Park</strong>
+              <strong>Sungjae Park</strong>, Suhan Park
               <p>
                 We learn reachable manifold of franka panda robot arm with block neural autoregressive flow as in 
               <a href="https://ieeexplore.ieee.org/document/9561589"
