--- a/index.html
+++ b/index.html
@@ -245,7 +245,24 @@
             </td>
 
           </tr>
-					
+
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Service</heading>
+              <p>
+                Reviewer for Neurips 2023, ICLR 2024. 
+              </p>
+  
+
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+      </tbody></table>
+
 <!--
           <tr>
             <td align="center" style="padding:20px;width:25%;vertical-align:middle">
