--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               </p>
               <p>Hi, I am a research intern in <a href="https://www.clvrai.com/">Cognitive Learning for Vision and robotics Lab (CLVR)</a> in KAIST</a>, advised by <a href="https://clvrai.com/web_lim/">Prof. Joseph J. Lim</a>.
               </p>
-              <p>Previously, I completed B.S. in Math and Mechanical Engineering at Seoul National University.
+              <p>Previously, I completed B.S. (Summa Cum Laude) in Mechanical Engineering and Mathematics at Seoul National University.
               </p>
 
              <!-- <p>
