--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <p> 
                 Specifically, I am interested in solving <strong>complex, long horizon manipulation tasks</strong> (e.g. cooking a tomato pasta), 
                 <br>
-                <strong>physical reasoning with interaction</strong> (e.g. experimenting with objects and inferring properties with phsyical interaction), and 
+                <strong>physical reasoning with interaction</strong> (e.g. experimenting with objects and inferring properties with physical interaction), and 
                 <br>
                 <strong>
                   physical reasoning for interaction</strong>(e.g. intuitive physics, leveraging object permanence for efficient object retrieval). 
