--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
               <p> 
                 Specifically, I am interested in solving <strong>complex, long horizon manipulation tasks</strong> (e.g. cooking a tomato pasta), 
                 <br>
-                <strong>physical reasoning with interaction</strong> (e.g. experimenting with objects and inferring properties with physical interaction), and 
+                <strong>physical reasoning WITH interaction</strong> (e.g. experimenting with objects and inferring properties with physical interaction), and 
                 <br>
                 <strong>
-                  physical reasoning for interaction</strong>(e.g. intuitive physics, leveraging object permanence for efficient object retrieval). 
+                  physical reasoning FOR interaction</strong>(e.g. intuitive physics, leveraging object permanence for efficient object retrieval). 
               </p>
               <p>
                 * denotes equal contribution.
