--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Service</heading>
               <p>
-                Reviewer for NeurlIPS 2023, ICLR 2024. 
+                Reviewer for NeurIPS 2023, ICLR 2024. 
               </p>
   
 
