--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <br>
               <a href="https://minoring.github.io//">Minho Heo*</a>, <strong><a href="https://rureadyo.github.io/">Sungjae Park*</a></strong>, <a href="https://clvrai.com/web_lim/">Joseph J. Lim</a>
               <br>
-              <em>To be submitted</em>
+              <em>In Progress</em>
               <br>
               <!-- <p>When humans are given with a complex manipulation task, such as putting a thread in a needle, they often fail in single shot. However, they can iteratively recover from the failure state and retry, completing the task in the end.
                 We model such process as hierarchical reinforcement learning, where the high level policy determines whether to use task policy or call recovery. This improves suboptimal policy's success rate up to twice. </p>
@@ -116,7 +116,7 @@
               <br>
               <strong>Sungjae Park</strong>, <a href="https://ayushj240.github.io/">Ayush Jain</a>, <a href="https://youngwoon.github.io/">Youngwoon Lee</a>, <a href="https://clvrai.com/web_lim/">Joseph J. Lim</a>
               <br>
-              <em>To be submitted</em>
+              <em>In Progress</em>
               <br>
               <p>We leverage <strong>"critical states"</strong> of a given task to achieve sample efficient reinforcement learning. Critical states refer to states where number of near-optimal actions is significantly smaller than others, such as when the ball is about to reach the floor in Breakout.</p>
               <!--<p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>-->
