--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
           </tr>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/ocp.png" alt="critical" width="200" height="160">
+              <img src="images/ocp_example.png" alt="critical" width="200" height="160">
             </td>
             <td width="75%" valign="middle">
-              <!--<a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing">-->
-              <papertitle>Efficient Cross-Embodiment Learning with Object-Centric Planner</papertitle>
-              <!--</a>-->
+              <a href="data/Thesis__Object_Centric_Planning_for_Cross_Embodiment_Learning_.pdf">
+                <papertitle>Efficient Cross-Embodiment Learning with Object-Centric Planner</papertitle>
+              </a>
               <br>
               <strong>Sungjae Park</strong>, <a href="https://clvrai.com/web_lim/">Joseph J. Lim</a>,  <a href="https://sites.google.com/robotics.snu.ac.kr/fcp/">Frank C. Park</a>
               <br>
