--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <strong>physical capabilities</strong> for manipulation tasks, and <strong>cognitive capabilities</strong> for intuitive understanding of the real world.
               </p>
               <p> 
-                Specifically, I am interested in solving <strong>complex, long horizon manipulation tasks</strong> (e.g. cooking a tomato pasta), 
+                Specifically, I am interested in solving <strong>complex manipulation tasks</strong> (e.g. dexterous, contact-rich, long-horizon tasks), 
                 <br>
                 <strong>physical reasoning WITH interaction</strong> (e.g. experimenting with objects and inferring properties with physical interaction), and 
                 <br>
@@ -102,23 +102,6 @@
               </p>
 
 
-              <!--<p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>-->
-            </td>
-          </tr>
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/critical_breakout.gif" alt="critical" width="160" height="160">
-            </td>
-            <td width="75%" valign="middle">
-              <!--<a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing">-->
-              <papertitle>Accelerating Reinforcement Learning with Critical States from Prior Data</papertitle>
-              <!--</a>-->
-              <br>
-              <strong>Sungjae Park</strong>, <a href="https://ayushj240.github.io/">Ayush Jain</a>, <a href="https://youngwoon.github.io/">Youngwoon Lee</a>, <a href="https://clvrai.com/web_lim/">Joseph J. Lim</a>
-              <br>
-              <em>In Progress</em>
-              <br>
-              <p>We leverage <strong>"critical states"</strong> of a given task to achieve sample efficient reinforcement learning. Critical states refer to states where number of near-optimal actions is significantly smaller than others, such as when the ball is about to reach the floor in Breakout.</p>
               <!--<p>In use at <a href="http://www.astrometry.net">Astrometry.net</a></p>-->
             </td>
           </tr>
