--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
               <p style="text-align:center">
                 <name>Sungjae Park</name>
               </p>
-              <p>Hi, I am a research intern in <a href="https://www.clvrai.com/">Cognitive Learning for Vision and robotics Lab (CLVR)</a> in KAIST</a>, advised by <a href="https://clvrai.com/web_lim/">Prof. Joseph J. Lim</a>.
+              <p>
+                Hi, I am a research intern in the Visual Computing Lab at Seoul National University, advised by <a href="https://jhugestar.github.io/">Prof. Hanbyul Joo</a>. 
               </p>
-              <p>Previously, I completed B.S. (Summa Cum Laude) in Mechanical Engineering and Mathematics at Seoul National University.
+              <p>
+                Previously, I was a research intern in the <a href="https://www.clvrai.com/">CLVR lab</a> at KAIST, advised by <a href="https://clvrai.com/web_lim/">Prof. Joseph J. Lim</a>.
+                I completed B.S. (Summa Cum Laude) in Mechanical Engineering and Mathematics at Seoul National University.
               </p>
 
              <!-- <p>
@@ -30,7 +33,7 @@
               </p>-->
               <p style="text-align:center">
                 <a href="mailto:teri305@snu.ac.kr">Email</a> &nbsp/&nbsp
-                <a href="data/SungjaePark_cv_20231215.pdf">CV</a> &nbsp/&nbsp
+                <a href="data/SungjaePark_cv_20240219.pdf">CV</a> &nbsp/&nbsp
               <!--  <a href="data/JonBarron-bio.txt">Bio</a> &nbsp/&nbsp -->
               <!--  <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp -->
                 <a href="https://twitter.com/sungj1026">Twitter</a> &nbsp/&nbsp
